<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/_8sdp"
    android:background="@android:color/white"
    android:clipChildren="true"
    app:cardCornerRadius="@dimen/_8sdp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            android:text="@string/kasus_terkonfirmasi_covid_19"
            android:textAlignment="center"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_14ssp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_positif"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_8sdp"
            android:text="0"
            android:textColor="@android:color/holo_red_light"
            android:textSize="@dimen/_30ssp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total_positive"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_12ssp" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_8sdp">

            <TextView
                android:id="@+id/tv_dirawat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:text="0"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="@dimen/_25ssp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tv_sembuh" />

            <TextView
                android:id="@+id/tv_meninggal"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="32dp"
                android:text="0"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="@dimen/_25ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/tv_sembuh" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/dirawat"
                app:layout_constraintEnd_toEndOf="@+id/tv_dirawat"
                app:layout_constraintStart_toStartOf="@+id/tv_dirawat"
                app:layout_constraintTop_toBottomOf="@+id/tv_dirawat" />

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:text="@string/meninggal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/tv_meninggal"
                app:layout_constraintStart_toStartOf="@+id/tv_meninggal"
                app:layout_constraintTop_toBottomOf="@+id/tv_meninggal"
                app:layout_constraintVertical_bias="0.0" />

            <TextView
                android:id="@+id/tv_sembuh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="0"
                android:textColor="@android:color/holo_red_dark"
                android:textSize="@dimen/_25ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sembuh"
                app:layout_constraintBottom_toBottomOf="@+id/textView6"
                app:layout_constraintEnd_toEndOf="@+id/tv_sembuh"
                app:layout_constraintStart_toStartOf="@+id/tv_sembuh"
                app:layout_constraintTop_toTopOf="@+id/textView6" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>
</com.google.android.material.card.MaterialCardView>