<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="@dimen/_8sdp"
    android:layout_marginTop="@dimen/_4sdp"
    android:layout_marginEnd="@dimen/_8sdp"
    app:cardCornerRadius="@dimen/_8sdp"
    app:cardUseCompatPadding="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/tv_nama_daerah"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="TextView"
            android:textColor="@android:color/black"
            android:textSize="@dimen/_16ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_positif"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_green_dark"
            android:textSize="@dimen/_25ssp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_sembuh"
            app:layout_constraintEnd_toStartOf="@+id/tv_sembuh"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tv_sembuh" />

        <TextView
            android:id="@+id/tv_sembuh"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textColor="@android:color/holo_orange_dark"
            android:textSize="@dimen/_25ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_nama_daerah" />

        <TextView
            android:id="@+id/tv_meninggal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/holo_red_dark"
            android:textSize="@dimen/_25ssp"
            app:layout_constraintBottom_toBottomOf="@+id/tv_sembuh"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/tv_sembuh"
            app:layout_constraintTop_toTopOf="@+id/tv_sembuh" />

        <TextView
            android:id="@+id/textView8"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="8dp"
            android:text="@string/positif"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/tv_positif"
            app:layout_constraintStart_toStartOf="@+id/tv_positif"
            app:layout_constraintTop_toBottomOf="@+id/tv_positif" />

        <TextView
            android:id="@+id/textView9"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sembuh"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintBottom_toBottomOf="@+id/textView8"
            app:layout_constraintEnd_toEndOf="@+id/tv_sembuh"
            app:layout_constraintStart_toStartOf="@+id/tv_sembuh"
            app:layout_constraintTop_toTopOf="@+id/textView8" />

        <TextView
            android:id="@+id/textView10"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/meninggal"
            android:textSize="@dimen/_14ssp"
            app:layout_constraintBottom_toBottomOf="@+id/textView9"
            app:layout_constraintEnd_toEndOf="@+id/tv_meninggal"
            app:layout_constraintStart_toStartOf="@+id/tv_meninggal"
            app:layout_constraintTop_toTopOf="@+id/textView9" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>