<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:id="@+id/sr_negara"
    android:layout_height="match_parent"
    android:background="#DCDDDA"
    tools:context=".ui.kasus_nasional.NasionalFragment">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <include layout="@layout/layout_no_connection" />

        <androidx.core.widget.NestedScrollView
            android:id="@+id/container_negara"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/container_content"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="@dimen/_150sdp"
                android:layout_margin="@dimen/_8sdp"
                app:cardCornerRadius="@dimen/_8sdp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <FrameLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <ImageView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:adjustViewBounds="true"
                            android:scaleType="centerCrop"
                            android:src="@drawable/baner" />

                        <FrameLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:alpha="0.7"
                            android:background="#000" />

                        <androidx.constraintlayout.widget.ConstraintLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <TextView
                                android:id="@+id/textView"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_alignParentStart="true"
                                android:layout_alignParentBottom="true"
                                android:layout_marginStart="@dimen/_12sdp"
                                android:text="@string/pantau_covid_19_nindonesia"
                                android:textColor="#fff"
                                android:textSize="@dimen/_20ssp"
                                android:textStyle="bold"
                                app:layout_constraintBottom_toBottomOf="parent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent"
                                app:layout_constraintVertical_bias="0.52" />

                            <TextView
                                android:id="@+id/tv_tanggal_sekarang"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="11 september 1996"
                                android:textColor="#fff"
                                android:textSize="@dimen/_16ssp"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintHorizontal_bias="0.0"
                                app:layout_constraintStart_toStartOf="@+id/textView"
                                app:layout_constraintTop_toBottomOf="@+id/textView" />

                            <TextView
                                android:id="@+id/tv_waktu"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/informasi_terkini_virus_corona_di_indonesia"
                                android:textColor="#fff"
                                android:textSize="@dimen/_12ssp"
                                app:layout_constraintEnd_toEndOf="parent"
                                app:layout_constraintHorizontal_bias="0.0"
                                app:layout_constraintStart_toStartOf="@+id/textView"
                                app:layout_constraintTop_toBottomOf="@+id/tv_tanggal_sekarang" />
                        </androidx.constraintlayout.widget.ConstraintLayout>
                    </FrameLayout>
                </LinearLayout>
            </com.google.android.material.card.MaterialCardView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_8sdp"
                app:cardCornerRadius="@dimen/_8sdp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="@dimen/_16sdp">

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="Update Kasus Corona"
                        android:textAlignment="center"
                        android:textColor="#000"
                        android:textSize="@dimen/_20ssp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <TextView
                        android:id="@+id/textView3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/berikut_infomarsi_covid_19_hari_ini"
                        android:textAlignment="center"
                        android:textColor="#000"
                        android:textSize="@dimen/_12ssp"
                        app:layout_constraintTop_toBottomOf="@+id/textView2" />

                    <View
                        android:id="@+id/view"
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:background="#979990"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/textView3" />

                    <include
                        android:id="@+id/container_content_kasus"
                        layout="@layout/layout_content_kasus"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/view" />

                    <View
                        android:id="@+id/line_2"
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:layout_marginTop="@dimen/_8sdp"
                        android:background="#979990"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/container_content_kasus" />

                    <include
                        layout="@layout/layout_content_laporan_terkini"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/_12ssp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@id/line_2" />

                </androidx.constraintlayout.widget.ConstraintLayout>
            </com.google.android.material.card.MaterialCardView>
        </LinearLayout>
        </androidx.core.widget.NestedScrollView>
    </FrameLayout>

</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>